--- a/index.css
+++ b/index.css
@@ -4,13 +4,16 @@ body{
   width : 100%;
   height : auto;
   background-color : red;
+  color: white;
+  font-family: 'Patrick Hand', cursive;
+  text-shadow: 4px 4px 5px black;
 }
 
 header{
   width : 100%;
   height : 600px;
   background-color : cyan;
-  background-image : url("im1.jpg");
+  background-image : url("https://raw.githubusercontent.com/Nicoconte/Nasa/master/im1.jpg");
   background-position : left center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -27,23 +30,59 @@ header{
 }
 
 #Titulo{
-  color : white;
   font-size : 50px;
-  font-family: 'Patrick Hand', cursive;
-  text-shadow: 4px 4px 5px black;
 }
-
-
-
 
 main{
   width : 100%;
-  height : 500px;
+  height : 1000px;
   background-color : green;
+  background-image : url("https://lh3.googleusercontent.com/XpOgKIwa5xclaCZ5bjqIruhKvBUQE_to9uVY9o5A2mRHFw00mvYl287VLCZ4Vus=s2600");
+  background-position : left center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display : flex;
+  justify-content: center;
+}
+
+#mapid {
+  height: 700px;
+  width: 1700px;
+  display : flex;
+  justify-content: center;
+}
+
+#HeaderRules{
+  font-size: 40px;
+}
+
+#textoGreen{
+  font-size: 30px;
+}
+
+#countryImputText{
+  font-size: 40px;
+}
+.textoBox{
+  text-align: center;
+  justify-content: center;
+}
+
+.texto{
+  height: 40px;
+  text-align: center;
+}
+
+.button{
+  height: 40px;
 }
 
 footer{
   width : 100%;
-  height : 300px;
+  height : 200px;
   background-color : purple;
+  background-image : url("https://lh3.googleusercontent.com/XpOgKIwa5xclaCZ5bjqIruhKvBUQE_to9uVY9o5A2mRHFw00mvYl287VLCZ4Vus=s2600");
+  background-position : left center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
